add resume and test link

--- a/index.html
+++ b/index.html
@@ -3,3 +3,5 @@ layout: home
 title: Home
 subtitle: Welcome to Sawyer's personal website!
 ---
+
+<a href="Sawyer Huang Resume Spring 22.pdf">Resume</a>
