--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 layout: home
 title: Home
 subtitle: Welcome to Sawyer's personal website!
----
 
-<a href="Sawyer Huang Resume Spring 22.pdf">Resume</a>
+subtitle: Here is my [resume](/Sawyer Huang Resume 22.pdf)
+---
