removed broken link

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 layout: home
 title: Home
 subtitle: Welcome to Sawyer's personal website!
-
-subtitle: Here is my [resume](/Sawyer Huang Resume 22.pdf)
 ---
+
+<p>Test will this print</p>
