--- a/index.html
+++ b/index.html
@@ -4,4 +4,11 @@ title: Home
 subtitle: Welcome to Sawyer's personal website!
 ---
 
-<p>Test will this print</p>
+
+<div class="text-center">
+  <h1>Whoops, this page doesn't exist.</h1>
+  <h1>Move along. (404 error)</h1>
+  <br/>
+
+  <img src="{{ 'assets/img/404-southpark.jpg' | relative_url }}" alt="Not found" />
+</div>
