Attempt to fix bugs

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: default
 title: Home
-subtitle: Welcome to Sawyer's personal website!!!!
+subtitle: Welcome to Sawyer's personal website!
 ---
