--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ subtitle: Welcome to Sawyer's personal website!
   <h1>Welcome to Sawyer's personal website!.</h1>
   <br/>
 
-  <h2>My name is Sawyer Huang, and I am a Data Analyst at Warner Bros. Discovery. I am also earning my Masters of Engineering in
+  <p>My name is Sawyer Huang, and I am a Data Analyst at Warner Bros. Discovery. I am also earning my Masters of Engineering in
   Operations Research and Information Engineering. On this site, you can find information on myself, my projects, and my social
-  media links.</h2>
+  media links.</p>
 </div>
