Fixed typo on home page

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@ subtitle: Welcome to Sawyer's personal website!
 ---
 
 <div class="text-center">
-  <h1>Welcome to Sawyer's personal website!.</h1>
+  <h1>Welcome to Sawyer's personal website!</h1>
   <br/>
 
   <p>My name is Sawyer Huang, and I am a Data Analyst at Warner Bros. Discovery. I am also earning my Masters of Engineering in
-  Operations Research and Information Engineering. On this site, you can find information on myself, my projects, and my social
-  media links.</p>
+  Operations Research and Information Engineering from Cornell University. On this site, you can find information on myself, my
+  projects, and my social media links. Feel free to look around and get to know me!</p>
 </div>
