--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@ subtitle: Welcome to Sawyer's personal website!
   <br/>
 
   <p>My name is Sawyer Huang, and I am a Data Analyst at Warner Bros. Discovery. I am also earning my Masters of Engineering in
-  Operations Research and Information Engineering from Cornell University. On this site, you can find information on myself, my
+  Operations Research and Information Engineering from Cornell University. On this site, you can find information about myself, my
   projects, and my social media links. Feel free to look around and get to know me!</p>
 </div>
